--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,12 @@
   ],
   "rules": {
     "react-refresh/only-export-components": "warn",
-    "react-hooks/exhaustive-deps": "error",
+    "react-hooks/exhaustive-deps": [
+      "error",
+      {
+        "additionalHooks": "(useSelectorDynamic|useCreateSelector)" // additionalHooks: "(useMyCustomHook|useMyOtherCustomHook)"
+      }
+    ],
     "import/first": "error",
     "import/newline-after-import": "error",
     "import/no-duplicates": "error",
