--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "import/newline-after-import": "error",
     "import/no-duplicates": "error",
     "unused-imports/no-unused-imports": "error",
-    "@typescript-eslint/consistent-type-imports": "error"
+    "@typescript-eslint/consistent-type-imports": "error",
+    "@typescript-eslint/no-explicit-any": 0
   }
 }
