--- a/admin/.eslintrc.json
+++ b/admin/.eslintrc.json
@@ -1,7 +1,9 @@
 {
   "env": {
+    "node": true,
     "browser": true,
     "es2020": true
+    //   "jest": true,
   },
   "extends": [
     "eslint:recommended",
